--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,9 @@ APP_PORT=3000
 DB_HOST=localhost
 DB_PORT=27017
 
+QUEUE_HOST=localhost
+QUEUE_PORT=5672
+QUEUE_USER=username
+QUEUE_PASS=password
+
 ACCOUNT_API_URL=http://localhost:5000/api/Account
