--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["transfer", "balance", "account"],
+  "keywords": [
+    "transfer",
+    "balance",
+    "account"
+  ],
   "author": "David Aaron Rosini",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -25,6 +30,7 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/dotenv": "^8.2.0",
